--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
+    <link href="./styles/style.css" rel="stylesheet" />
     <title>Devat Studio</title>
   </head>
   <body>
@@ -231,12 +231,12 @@
                 <span class="expand-button"></span>
               </div>
               <div class="card-back">
-                <h4 class="card-back-title">Web design</h4>
+                <h4 class="card-back-title">Web Development</h4>
                 <ul class="card-back-info">
-                  <li>UI/UX Design</li>
-                  <li>User Research</li>
-                  <li>Interactions and Flow</li>
-                  <li>Visual Design</li>
+                  <li>Lorem Ipsum</li>
+                  <li>Lorem Ipsum</li>
+                  <li>Lorem Ipsum</li>
+                  <li>Lorem Ipsum</li>
                 </ul>
                 <button class="primary-button card-back-button">
                   Learn more
@@ -258,12 +258,12 @@
                 <span class="expand-button"></span>
               </div>
               <div class="card-back">
-                <h4 class="card-back-title">Web design</h4>
+                <h4 class="card-back-title">Digital Marketing</h4>
                 <ul class="card-back-info">
-                  <li>UI/UX Design</li>
-                  <li>User Research</li>
-                  <li>Interactions and Flow</li>
-                  <li>Visual Design</li>
+                  <li>Lorem Ipsum</li>
+                  <li>Lorem Ipsum</li>
+                  <li>Lorem Ipsum</li>
+                  <li>Lorem Ipsum</li>
                 </ul>
                 <button class="primary-button card-back-button">
                   Learn more
