Main screen animation added

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="contact">
         <h2>Contact Us</h2>
         <form action="/action_page.php" method="get">
           <input
