--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
         />
       </section>
       <footer>
-        <div>
+        <div class="footer-wrapper">
           <b>Connect with us:</b>
           <ul>
             <li>
