Footer added and styled

--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
       <footer>
         <div class="footer-wrapper">
           <b>Connect with us:</b>
-          <ul>
+          <ul class="social-media-footer">
             <li>
               <a href="#"
-                ><span>Facebook</span>
+                ><span class="visually-hidden">Facebook</span>
                 <svg
                   width="19"
                   height="35"
@@ -360,7 +360,7 @@
             </li>
             <li>
               <a href="#"
-                ><span>Instagram</span>
+                ><span class="visually-hidden">Instagram</span>
                 <svg
                   width="35"
                   height="35"
@@ -376,7 +376,9 @@
             </li>
           </ul>
         </div>
-        <p>Email: info@devatstudio.net</p>
+        <a class="contact-email" href="mailto:info@devatstudio.net"
+          >Email: info@devatstudio.net</a
+        >
       </footer>
     </div>
   </body>
