"Services" h4 font size changed

--- a/index.html
+++ b/index.html
@@ -242,7 +242,10 @@
                 <span class="expand-button"></span>
               </div>
               <div class="card-back">
-                <h4 class="card-back-title">Web Development</h4>
+                <h4 class="card-back-title">
+                  Web<br />
+                  Development
+                </h4>
                 <ul class="card-back-info">
                   <li>Lorem Ipsum</li>
                   <li>Lorem Ipsum</li>
@@ -269,7 +272,7 @@
                 <span class="expand-button"></span>
               </div>
               <div class="card-back">
-                <h4 class="card-back-title">Digital Marketing</h4>
+                <h4 class="card-back-title">Digital<br />Marketing</h4>
                 <ul class="card-back-info">
                   <li>Lorem Ipsum</li>
                   <li>Lorem Ipsum</li>
