Main screen padding change

--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         <div class="dropdown">
           <button onclick="myFunction()" class="dropbtn">SERVICES</button>
           <div id="myDropdown" class="dropdown-content">
-            <a href="#">WEB DESIGN</a>
-            <a href="#">WEB DEVELOPMENT</a>
-            <a href="#">DIGITAL MARKETING</a>
+            <a href="web-design.html">WEB DESIGN</a>
+            <a href="web-development.html">WEB DEVELOPMENT</a>
+            <a href="digital-marketing.html">DIGITAL MARKETING</a>
           </div>
         </div>
       </nav>
