Styling service img

--- a/web-design.html
+++ b/web-design.html
@@ -83,13 +83,16 @@
             />
           </a>
           <div class="service-section-wrapper">
-            <img
-              class="service-photo"
-              src="img/design.jpg"
-              alt="Photo of a tablet"
-              width="356"
-              height="434"
-            />
+            <div class="card">
+              <div class="lines"></div>
+              <img
+                class="service-photo"
+                src="img/design.jpg"
+                alt="Photo of a tablet"
+                width="356"
+                height="434"
+              />
+            </div>
             <div class="service-description">
               <h1 class="service-heading">
                 WEB<span class="yellow-word"> DESIGN</span>
@@ -116,6 +119,50 @@
                   <li>Lorem ipsum</li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </section>
+        <section class="price-list">
+          <h2 class="price-list-heading">Price List</h2>
+          <div class="price-list-wrapper">
+            <div class="price-card">
+              <h3 class="price-card-name">Basic</h3>
+              <span>From</span>
+              <small class="dollar">$</small>
+              <span class="price-card-number">100</span>
+              <ul class="price-card-features">
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+              </ul>
+            </div>
+            <div class="price-card">
+              <h3 class="price-card-name">Pro</h3>
+              <span>From</span>
+              <small class="dollar">$</small>
+              <span class="price-card-number">400</span>
+              <ul class="price-card-features">
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+              </ul>
+            </div>
+            <div class="price-card">
+              <h3 class="price-card-name">Exclusive</h3>
+              <span>From</span>
+              <small class="dollar">$</small>
+              <span class="price-card-number">600</span>
+              <ul class="price-card-features">
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+                <li>Lorem Ipsum</li>
+              </ul>
             </div>
           </div>
         </section>
