Photo animation fixed

--- a/web-design.html
+++ b/web-design.html
@@ -83,7 +83,7 @@
             />
           </a>
           <div class="service-section-wrapper">
-            <div class="card">
+            <div class="animated-photo">
               <div class="lines"></div>
               <img
                 class="service-photo"
