Main-screen scroll added

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </header>
     <div class="container">
       <main>
-        <section class="main-screen">
+        <section id="section-1" class="main-screen">
           <a class="logo" href="index.html">
             <img
               src="img/logo.svg"
@@ -127,15 +127,9 @@
               height="163"
             />
           </div>
-          <img
-            class="scroll"
-            src="img/scroll.svg"
-            alt="AScroll Down"
-            width="15"
-            height="46"
-          />
+          <a id="scroll-btn" href="#section-2"></a>
         </section>
-        <article class="features">
+        <article id="section-2" class="features">
           <h2 class="features-heading">Why choose us?</h2>
           <ul class="features-card-wrapper">
             <li class="features-card features-card--1">
