--- a/web-design.html
+++ b/web-design.html
@@ -127,41 +127,41 @@
           <div class="price-list-wrapper">
             <div class="price-card">
               <h3 class="price-card-name">Basic</h3>
-              <span>From</span>
+              <span>From</span><br />
               <small class="dollar">$</small>
               <span class="price-card-number">100</span>
               <ul class="price-card-features">
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature faded">Lorem Ipsum</li>
+                <li class="price-feature faded">Lorem Ipsum</li>
+                <li class="price-feature faded">Lorem Ipsum</li>
               </ul>
             </div>
-            <div class="price-card">
+            <div class="price-card solid">
               <h3 class="price-card-name">Pro</h3>
-              <span>From</span>
+              <span>From</span><br />
               <small class="dollar">$</small>
               <span class="price-card-number">400</span>
               <ul class="price-card-features">
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature faded">Lorem Ipsum</li>
+                <li class="price-feature faded">Lorem Ipsum</li>
               </ul>
             </div>
             <div class="price-card">
               <h3 class="price-card-name">Exclusive</h3>
-              <span>From</span>
+              <span>From</span><br />
               <small class="dollar">$</small>
               <span class="price-card-number">600</span>
               <ul class="price-card-features">
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
-                <li>Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
+                <li class="price-feature">Lorem Ipsum</li>
               </ul>
             </div>
           </div>
