Scroll bar added + Styled

--- a/web-design.html
+++ b/web-design.html
@@ -19,10 +19,14 @@
             <div class="bar"></div>
           </button>
         </div>
-        <div class="page-buttons">
-          <span class="dot-active" onclick="currentSlide(1)"></span>
-          <span class="dot" onclick="currentSlide(2)"></span>
-          <span class="dot" onclick="currentSlide(3)"></span>
+        <div>
+          <h4>01</h4>
+        </div>
+        <div class="progress-container">
+          <div class="progress-bar" id="myBar"></div>
+        </div>
+        <div>
+          <h4>03</h4>
         </div>
         <ul class="social-media-header">
           <li>
@@ -277,5 +281,6 @@
     </div>
     <script src="/js/navigation.js"></script>
     <script src="/js/drop-menu.js"></script>
+    <script src="/js/progress-bar.js"></script>
   </body>
 </html>
