--- a/index.html
+++ b/index.html
@@ -19,14 +19,8 @@
             <div class="bar"></div>
           </button>
         </div>
-        <div>
-          <h4>01</h4>
-        </div>
         <div class="progress-container">
           <div class="progress-bar" id="myBar"></div>
-        </div>
-        <div>
-          <h4>04</h4>
         </div>
         <ul class="social-media-header">
           <li>
@@ -225,9 +219,11 @@
                     <li>Interactions and Flow</li>
                     <li>Visual Design</li>
                   </ul>
-                  <button class="primary-button card-back-button">
-                    Learn more
-                  </button>
+                  <a
+                    href="web-design.html"
+                    class="primary-button card-back-button"
+                    >Learn More</a
+                  >
                 </div>
               </div>
             </li>
@@ -255,9 +251,11 @@
                     <li>Lorem Ipsum</li>
                     <li>Lorem Ipsum</li>
                   </ul>
-                  <button class="primary-button card-back-button">
-                    Learn more
-                  </button>
+                  <a
+                    href="web-development.html"
+                    class="primary-button card-back-button"
+                    >Learn More</a
+                  >
                 </div>
               </div>
             </li>
@@ -282,9 +280,11 @@
                     <li>Lorem Ipsum</li>
                     <li>Lorem Ipsum</li>
                   </ul>
-                  <button class="primary-button card-back-button">
-                    Learn more
-                  </button>
+                  <a
+                    href="digital-marketing.html"
+                    class="primary-button card-back-button"
+                    >Learn More</a
+                  >
                 </div>
               </div>
             </li>
