Ribbon for prices added

--- a/web-design.html
+++ b/web-design.html
@@ -148,6 +148,7 @@
                 <li class="price-feature faded">Lorem Ipsum</li>
                 <li class="price-feature faded">Lorem Ipsum</li>
               </ul>
+              <span class="ribbon"></span>
             </div>
             <div class="price-card">
               <h3 class="price-card-name">Exclusive</h3>
