Text content changed

--- a/index.html
+++ b/index.html
@@ -81,17 +81,16 @@
             />
           </a>
           <div class="main-description">
-            <small class="subheading">CUSTOM WEB APPLICATIONS</small>
+            <small class="subheading">WELCOME TO DEVAT STUDIO</small>
             <h1 class="main-screen-heading">
               CUSTOM WEB <span class="yellow-word">APPLICATIONS</span>
             </h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur. Tortor pharetra sit quis
-              sit tincidunt et. Nulla nunc pharetra dignissim mattis ac cursus.
-              Vitae rhoncus venenatis vulputate ante dolor tristique a.
-              Vestibulum elit quis erat ac placerat convallis tortor non et.
-              Diam vitae at tempus interdum ante ullamcorper sed faucibus
-              consequat.
+              We are your dedicated partners in turning your innovative ideas
+              into reality. We understand that every business is unique, and a
+              one-size-fits-all solution may not always be the best fit. That's
+              why we specialize in creating bespoke web applications tailored to
+              your specific needs.
             </p>
             <img
               class="signature"
@@ -140,8 +139,8 @@
               <div class="features-info">
                 <h3>CUSTO<span class="yellow-word">MIZED</span></h3>
                 <p>
-                  Vestibulum elit quis erat ac placerat convallis tortor non et.
-                  Diam vitae at tempus interdum.
+                  We create web applications that stand out and make a lasting
+                  impression.
                 </p>
               </div>
             </li>
@@ -156,8 +155,8 @@
               <div class="features-info">
                 <h3>LATEST <span class="yellow-word">TECHNOLOGIES</span></h3>
                 <p>
-                  Vestibulum elit quis erat ac placerat convallis tortor non et.
-                  Diam vitae at tempus interdum.
+                  Our team understand the rapid pace at which technology
+                  evolves.
                 </p>
               </div>
             </li>
@@ -172,24 +171,25 @@
               <div class="features-info">
                 <h3>REASONABLE <span class="yellow-word">PRICE</span></h3>
                 <p>
-                  Vestibulum elit quis erat ac placerat convallis tortor non et.
-                  Diam vitae at tempus interdum.
+                  Offering exceptional value without compromising on quality.
                 </p>
               </div>
             </li>
             <li class="features-card features-card--4">
               <img
                 class="features-image"
-                src="img/tools.png"
+                src="img/brush.png"
                 alt="Illustration of tools"
                 width="93"
                 height="93"
               />
               <div class="features-info">
-                <h3>LATEST <span class="yellow-word">TECHNOLOGIES</span></h3>
+                <h3>
+                  MAINTENANCE <span class="yellow-word">AND SUPPORT</span>
+                </h3>
                 <p>
-                  Vestibulum elit quis erat ac placerat convallis tortor non et.
-                  Diam vitae at tempus interdum.
+                  We offer ongoing maintenance and support to keep your web
+                  application up-to-date.
                 </p>
               </div>
             </li>
@@ -215,7 +215,7 @@
                   <h4 class="card-back-title">Web design</h4>
                   <ul class="card-back-info">
                     <li>UI/UX Design</li>
-                    <li>User Research</li>
+                    <li>Brand Identity Integration</li>
                     <li>Interactions and Flow</li>
                     <li>Visual Design</li>
                   </ul>
@@ -246,10 +246,10 @@
                     Development
                   </h4>
                   <ul class="card-back-info">
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
-                    <li>Lorem Ipsum</li>
+                    <li>Responsive & Mobile-Ready</li>
+                    <li>E-commerce Solutions</li>
+                    <li>Latest Technologies</li>
+                    <li>Website Maintenance and Support</li>
                   </ul>
                   <a
                     href="web-development.html"
