--- a/web-design.html
+++ b/web-design.html
@@ -96,10 +96,11 @@
                 WEB<span class="yellow-word"> DESIGN</span>
               </h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur. Tortor pharetra sit quis
-                sit tincidunt et. Nulla nunc pharetra dignissim mattis ac
-                cursus. Vitae rhoncus venenatis vulputate ante dolor tristique
-                a.
+                We understand that exceptional design is the key to creating
+                memorable and impactful digital experiences. Our team of skilled
+                designers is passionate about blending creativity with
+                user-centric principles to craft UI/UX designs that captivate,
+                engage, and inspire.
               </p>
               <div class="service-features">
                 <ul>
@@ -111,10 +112,10 @@
                 </ul>
                 <ul>
                   <li>Graphics</li>
-                  <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
+                  <li>Responsive</li>
+                  <li>Brand Identity Integration</li>
+                  <li>Innovative Designs</li>
+                  <li>Latest trends involved</li>
                 </ul>
               </div>
             </div>
