--- a/web-development.html
+++ b/web-development.html
@@ -96,18 +96,19 @@
                 WEB<span class="yellow-word"> DEVELOPMENT</span>
               </h1>
               <p>
-                Lorem ipsum dolor sit amet consectetur. Tortor pharetra sit quis
-                sit tincidunt et. Nulla nunc pharetra dignissim mattis ac
-                cursus. Vitae rhoncus venenatis vulputate ante dolor tristique
-                a.
+                Out team are assionate about crafting remarkable web experiences
+                that empower businesses and individuals to thrive in the digital
+                world. As technology evolves, so does our commitment to
+                delivering cutting-edge solutions that elevate your online
+                presence and drive tangible results.
               </p>
               <div class="service-features">
                 <ul>
+                  <li>Responsive & Mobile-Ready</li>
+                  <li>E-commerce Solutions</li>
                   <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
-                  <li>Lorem ipsum</li>
+                  <li>Latest Technologies</li>
+                  <li>Website Maintenance & Support</li>
                 </ul>
                 <ul>
                   <li>Lorem ipsum</li>
