--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                     class="services-img"
                     src="img/design.jpg"
                     alt="Image of a tablet"
-                    width="291px"
-                    height="369px"
+                    width="291"
+                    height="369"
                   />
                   <h3 class="services-title">WEB DESIGN</h3>
                   <span class="expand-button"></span>
